Minor heading changes

--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a href="blogslist.html">Blog</a>
+              <a href="blogslist.html">Events</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a href="blogslist.html">Registration</a>
           </li>
           <li>
               <a href="about.html">About</a>
@@ -47,10 +47,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a href="blogslist.html">Blog</a>
+              <a href="blogslist.html">Events</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a href="blogslist.html">Registration</a>
           </li>
           <li>
               <a class="active" href="about.html">About</a>
@@ -113,18 +113,11 @@
                         <a href="#">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Blogs</a>
+                        <a href="blogslist.html">Events</a>
                     </li>
                     <li>
                         <a href="blogslist.html">Projects</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </p>
-        </div>
-
         <div id="right-footer">
             <h3>Follow us on</h3>
             <div id="social-media-footer">
