--- a/blogslist.html
+++ b/blogslist.html
@@ -19,10 +19,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a href="blogslist.html">Blog</a>
+              <a href="blogslist.html">Events</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a href="blogslist.html">Registration</a>
           </li>
           <li>
               <a href="about.html">About</a>
@@ -47,10 +47,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a class="active" href="blogslist.html">Blog</a>
+              <a class="active" href="blogslist.html">Events</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a href="blogslist.html">Registration</a>
           </li>
           <li>
               <a href="about.html">About</a>
@@ -68,7 +68,7 @@
   </div>
 
   <main>
-    <h2 class="page-heading">Blogs</h2>
+    <h2 class="page-heading">Events</h2>
 
     <section>
       <div class="card">
@@ -103,7 +103,7 @@
 
         <div class="card-description">
           <a href="#">
-            <h3>The Blog Title Here</h3>
+            <h3>The Events Title Here</h3>
           </a>
           <div class="card-meta">
             Posted by Admin on 23/01/2018 in
@@ -126,7 +126,7 @@
 
         <div class="card-description">
           <a href="blogpost.html">
-            <h3>The Blog Title Here</h3>
+            <h3>The Events Title Here</h3>
           </a>
           <div class="card-meta">
             Posted by Admin on 23/01/2018 in
@@ -149,7 +149,7 @@
 
         <div class="card-description">
           <a href="#">
-            <h3>The Blog Title Here</h3>
+            <h3>The Events Title Here</h3>
           </a>
           <div class="card-meta">
             Posted by Admin on 23/01/2018 in
@@ -172,7 +172,7 @@
 
         <div class="card-description">
           <a href="blogpost.html">
-            <h3>The Blog Title Here</h3>
+            <h3>The Events Title Here</h3>
           </a>
           <div class="card-meta">
             Posted by Admin on 23/01/2018 in
@@ -195,7 +195,7 @@
 
         <div class="card-description">
           <a href="#">
-            <h3>The Blog Title Here</h3>
+            <h3>The Events Title Here</h3>
           </a>
           <div class="card-meta">
             Posted by Admin on 23/01/2018 in
@@ -233,10 +233,10 @@
                         <a href="#">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Blogs</a>
+                        <a href="blogslist.html">Events</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Projects</a>
+                        <a href="blogslist.html">Registration</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
