--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>GTCoding</title>
+    <title>BODHI</title>
 </head>
 
 <body>
@@ -19,10 +19,10 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="blogslist.html">Blog</a>
+                <a href="blogslist.html">Events</a>
             </li>
             <li>
-                <a href="blogslist.html">Projects</a>
+                <a href="blogslist.html">Registration</a>
             </li>
             <li>
                 <a href="about.html">About</a>
@@ -47,10 +47,10 @@
                 <a class="active" href="index.html">Home</a>
             </li>
             <li>
-                <a href="blogslist.html">Blog</a>
+                <a href="blogslist.html">Events</a>
             </li>
             <li>
-                <a href="blogslist.html">Projects</a>
+                <a href="blogslist.html">Registration</a>
             </li>
             <li>
                 <a href="about.html">About</a>
@@ -74,7 +74,7 @@
 
     <main>
         <a href="blogslist.html">
-            <h2 class="section-heading">All Blogs</h2>
+            <h2 class="section-heading">All Events</h2>
         </a>
 
         <section>
@@ -87,7 +87,7 @@
 
                 <div class="card-description">
                     <a href="blogpost.html">
-                        <h3>The Blog Title Here</h3>
+                        <h3>The Events Title Here</h3>
                     </a>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, ullam facilis consequuntur eligendi sit accusamus tempora
@@ -106,7 +106,7 @@
 
                 <div class="card-description">
                     <a href="blogpost.html">
-                        <h3>The Blog Title Here</h3>
+                        <h3>The Events Title Here</h3>
                     </a>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, ullam facilis consequuntur eligendi sit accusamus tempora
@@ -186,7 +186,7 @@
                             <a href="#">Privacy Policy</a>
                         </li>
                         <li>
-                            <a href="blogslist.html">Blogs</a>
+                            <a href="blogslist.html">Events</a>
                         </li>
                         <li>
                             <a href="blogslist.html">Projects</a>
