--- a/blogpost.html
+++ b/blogpost.html
@@ -19,10 +19,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a  href="blogslist.html">Blog</a>
+              <a  href="blogslist.html">Events</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a href="blogslist.html">Registration</a>
           </li>
           <li>
               <a href="about.html">About</a>
@@ -47,10 +47,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a class="active" href="blogslist.html">Blog</a>
+              <a class="active" href="blogslist.html">Events</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a href="blogslist.html">Registration</a>
           </li>
           <li>
               <a href="about.html">About</a>
@@ -69,7 +69,7 @@
 
   <main>
 
-    <h2 class="page-heading">Blog Post Heading</h2>
+    <h2 class="page-heading">Events Post Heading</h2>
     <div id="post-container">
       <section id="blogpost">
         <div class="card">
@@ -95,7 +95,7 @@
         </div>
 
         <div id="comments-section">
-          Comments Section
+          Comments SectionBlogs
         </div>
       </section>
 
@@ -120,10 +120,10 @@
                         <a href="#">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Blogs</a>
+                        <a href="blogslist.html">Events</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Projects</a>
+                        <a href="blogslist.html">Registration</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
