--- a/about.html
+++ b/about.html
@@ -128,8 +128,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="fab fa-youtube"></i>
+                        <a href="https://www.instagram.com/bodhi_tvm/">
+                            <i class="fab fa-instagram"></i>
                         </a>
                     </li>
                     <li>
