--- a/about.html
+++ b/about.html
@@ -13,30 +13,10 @@
 </head>
 
 <body>
-  <div id="slideout-menu">
-      <ul>
-          <li>
-              <a href="index.html">Home</a>
-          </li>
-          <li>
-              <a href="blogslist.html">Events</a>
-          </li>
-          <li>
-              <a href="blogslist.html">Registration</a>
-          </li>
-          <li>
-              <a href="about.html">About</a>
-          </li>
-          <li>
-              <input type="text" placeholder="Search Here">
-          </li>
-      </ul>
-  </div>
-
   <nav>
       <div id="logo-img">
           <a href="#">
-              <img src="img/KSU.jpg" alt="GTCoding Logo">
+                <img src="img/KSU.jpg" alt="KSU" id="logo-pic" >
           </a>
       </div>
       <div id="menu-icon">
