--- a/index.html
+++ b/index.html
@@ -13,30 +13,11 @@
 </head>
 
 <body>
-    <div id="slideout-menu">
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="blogslist.html">Events</a>
-            </li>
-            <li>
-                <a href="blogslist.html">Registration</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-            <li>
-                <input type="text" placeholder="Search Here">
-            </li>
-        </ul>
-    </div>
 
     <nav>
         <div id="logo-img">
             <a href="#">
-                <img src="img/KSU.jpg" alt="KSU" style="width:228px;height:72px;">
+                <img src="img/KSU.jpg" alt="KSU" id="logo-pic" >
             </a>
         </div>
         <div id="menu-icon">
