--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav>
         <div id="logo-img">
             <a href="#">
-                <img src="img/logo.png" alt="GTCoding Logo">
+                <img src="img/KSU.jpg" alt="KSU" style="width:228px;height:72px;">
             </a>
         </div>
         <div id="menu-icon">
@@ -68,8 +68,8 @@
     </div>
 
     <div id="banner">
-        <h1>&lt;GTCoding/&gt;</h1>
-        <h3>Learn coding from scratch</h3>
+        <h1>&lt;BODHI&gt;</h1>
+        <h3>Get Enlighted</h3>
     </div>
 
     <main>
@@ -125,7 +125,7 @@
             <div class="card">
                 <div class="card-image">
                     <a href="blogpost.html">
-                        <img src="img/3.jpg" alt="Card Image">
+                        <img src="img/4k-wallpaper-afterglow-blur-1236701.jpg" alt="Card Image">
                     </a>
                 </div>
 
@@ -208,8 +208,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <i class="fab fa-youtube"></i>
+                            <a href="https://www.instagram.com/bodhi_tvm/">
+                                <i class="fab fa-instagram"></i>
                             </a>
                         </li>
                         <li>
@@ -219,7 +219,7 @@
                         </li>
                     </ul>
                 </div>
-                <p>This website is developed by GTCoding</p>
+                <p>This website is developed by pvtKanjani</p>
             </div>
         </footer>
 
