--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>GTCoding</title>
+  <title>BODHI</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
   <nav>
       <div id="logo-img">
           <a href="#">
-              <img src="img/logo.png" alt="GTCoding Logo">
+              <img src="img/KSU.jpg" alt="GTCoding Logo">
           </a>
       </div>
       <div id="menu-icon">
