--- a/blogpost.html
+++ b/blogpost.html
@@ -36,7 +36,7 @@
   <nav>
       <div id="logo-img">
           <a href="#">
-              <img src="img/logo.png" alt="GTCoding Logo">
+              <img src="img/KSU.jpg" alt="GTCoding Logo">
           </a>
       </div>
       <div id="menu-icon">
