--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                     </li>
                 </ul>
             </div>
-            <p>This website is developed by GTCoding</p>
+            <p>This website is developed by pvtKanjani</p>
         </div>
     </footer>
 
