--- a/blogpost.html
+++ b/blogpost.html
@@ -148,7 +148,7 @@
                     </li>
                 </ul>
             </div>
-            <p>This website is developed by GTCoding</p>
+            <p>This website is developed by pvtKanjani</p>
         </div>
     </footer>
 
