--- a/blogslist.html
+++ b/blogslist.html
@@ -261,7 +261,7 @@
                     </li>
                 </ul>
             </div>
-            <p>This website is developed by GTCoding</p>
+            <p>This website is developed by pvtKanjani</p>
         </div>
     </footer>
 
